Remove workarounds to #834 because they are no longer needed thanks to #1224 and #1228.